separate widget and frontend, add sandbox-stream-api
